tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_86.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := (~ (((- 1223) MOD (0 * y)) > ((y DIV z) DIV (1 DIV y))));
               z := (((+ (2 - y)) MOD ((x * y) MOD (- 0))) MOD (((1223 DIV y) - (200 * 0)) - ((+ 2) - (0 + 1))));
               y := (- (- (+ (- x))));
               r := ((((2 * 1223) + (- x)) - (+ (200 * 0))) >= (((y + y) - (- 1)) DIV ((2 - 0) MOD (z * 200))));
               r := (((+ (- z)) MOD ((1223 * z) - (2 DIV z))) <= (((1223 * z) MOD (200 * 1)) - ((1223 DIV z) MOD (- z))));
  (* error *)  z := ((((- r) * (0 * x)) + ((1223 DIV x) DIV (x MOD y))) MOD (((1 - 2) + (y DIV 2)) * ((2 - 200) * (x * 1))));
               p := ((((2 MOD 200) + (2 MOD 1)) > ((1 * 200) - (z - 200))) & (((0 = 0) OR (2 = 200)) & ((0 + 1) <= (2 MOD 0))));
               x := ((- ((x * 200) - (z + 1))) - (((z DIV x) DIV (z MOD 200)) * ((200 * z) MOD (1 * 200))));
               z := ((((x MOD 2) MOD (1 MOD 1223)) * ((x - y) - (1 + 1223))) DIV (((1223 + z) MOD (- z)) DIV ((- y) DIV (z - 200))));
               q := ((((x - z) - (y - 200)) - (- (z - z))) < (((z DIV 1) DIV (1223 - 2)) DIV ((x * 200) * (200 + 1223))))
END Test16.